--- a/pom.xml
+++ b/pom.xml
@@ -10,8 +10,8 @@
 	</parent>
 	<groupId>app.RecolectandoAPI</groupId>
 	<artifactId>RecolectandoAPI</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
-	<name>RecolectandoAPI</name>
+	<version>0.0.1</version>
+	<name>recolectando_api</name>
 	<description>Proyecto de mediciones de reciclaje</description>
 	<url/>
 	<licenses>
