correccion urls allowedOrigins

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,8 +17,8 @@ logging.logback.rollingpolicy.max-file-size=10MB
 logging.logback.rollingpolicy.max-history=30
 
 # ================== URLs for CORS configuration ===========================
-url.cors.allowedOrigin1=${URL_CORS_ALLOWED_ORIGIN_1}
-url.cors.allowedOrigin2=${URL_CORS_ALLOWED_ORIGIN_2}
+url.cors.allowedOrigin1=http://localhost:5173
+url.cors.allowedOrigin2=http://192.168.0.105:5173
 
 # ================== Endpoints Exposure ====================================
 #Enpoints que queremos exponer de la API
