--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:h2:mem:testdb
+spring.application.name=api_recolectando_TESTS
+
+spring.datasource.url=jdbc:h2://mem:db;DB_CLOSE_DELAY=-1
 spring.datasource.username=pepe
 spring.datasource.password=pepe
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+spring.datasource.driver-class-name=org.h2.Driver
