--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -16,3 +16,5 @@ jwt.refresh-token.expiration=10000
 # ================== URLs for CORS configuration ===========================
 url.cors.allowedOrigin1=http://localhost:5173
 url.cors.allowedOrigin2=http://192.168.0.105:5173
+
+server.servlet.context-path=/api/v1
